--- a/app/src/main/res/layout/gallery_item_view.xml
+++ b/app/src/main/res/layout/gallery_item_view.xml
@@ -1,16 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="4dp"
     android:layout_gravity="center"
+    android:layout_margin="5dp"
     app:cardCornerRadius="4dp">
 
-    <ImageView
-        android:id="@+id/galleryImageView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:contentDescription="@string/gallery_image"
-        android:scaleType="centerCrop"/>
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/galleryImageView"
+            android:layout_width="match_parent"
+            android:layout_height="175dp"
+            android:contentDescription="@string/gallery_image"
+            android:scaleType="centerCrop" />
+
+        <Button
+            android:id="@+id/saveButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/galleryImageView"
+            android:layout_centerHorizontal="true"
+            android:gravity="center_horizontal"
+            android:text="@string/save" />
+
+    </RelativeLayout>
+
 </androidx.cardview.widget.CardView>
